# renderer2

./: Architecture.md  Cargo.toml  notes.txt
src/: command_buffer_heuristics.rs  command_source.rs  debug_data.rs  debug_pipelines.rs  debug_renderer.rs  foo.rs  gpu_data.rs  lib.rs  material.rs  material_cache.rs  mesh.rs  mesh_cache.rs  pipeline.rs  pipeline_configuration.rs  renderer.rs  renderer_configuration.rs  skeletonized_mesh.rs  sub_mesh.rs  texture.rs  uniform.rs  uniform_group.rs  vertex.rs
