[package]
name = "renderer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18"
raw-window-handle = "0.5"
pollster = "0.3"
slot_map = { git = "https://github.com/PaulL48/rust_slot_map.git" }
image = "0.24"
log = "0.4"
derive_builder = "0.13"
